--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,13 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-
+<distributionManagement>
+   <repository>
+     <id>github</id>
+     <name>GitHub OWNER Apache Maven Packages</name>
+     <url>https://maven.pkg.github.com/OWNER/REPOSITORY</url>
+   </repository>
+</distributionManagement>
   <build>
     <finalName>helloworld</finalName>
     <plugins>
