--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+<repositories>
+    <repository>
+      <id>maven-group</id>
+      <url>http://localhost:8081/repository/maven-public/</url>
+    </repository>
+  </repositories>	
 <distributionManagement>
    <repository>
      <id>github</id>
