--- a/pom.xml
+++ b/pom.xml
@@ -21,14 +21,17 @@
       <id>maven-group</id>
       <url>http://localhost:8081/repository/maven-public/</url>
     </repository>
-  </repositories>	
+  </repositories>		
 <distributionManagement>
-   <repository>
-     <id>github</id>
-     <name>GitHub OWNER Apache Maven Packages</name>
-     <url>https://maven.pkg.github.com/farheened681/pipelines-java</url>
-   </repository>
-</distributionManagement>
+    <snapshotRepository>
+      <id>nexus-snapshots</id>
+      <url>http://localhost:8081/repository/maven-snapshots/</url>
+    </snapshotRepository>
+    <repository>
+      <id>nexus-releases</id>
+      <url>http://localhost:8081/repository/maven-releases/</url>
+    </repository>
+  </distributionManagement>
   <build>
     <finalName>helloworld</finalName>
     <plugins>
