--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>helloworld</groupId>
   <artifactId>helloworld</artifactId>
-  <packaging>jar</packaging>
-  <version>8.1</version>
+  <packaging>war</packaging>
+  <version>8.2</version>
   <name>Hello world sample web app</name>
   <url>http://maven.apache.org</url>
 
