--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>helloworld</groupId>
   <artifactId>helloworld</artifactId>
   <packaging>war</packaging>
-  <version>8.4</version>
+  <version>8.4-SNAPSHOT</version>
   <name>Hello world sample web app</name>
   <url>http://maven.apache.org</url>
 
