--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,12 @@
   <version>8.4-SNAPSHOT</version>
   <name>Hello world sample web app</name>
   <url>http://maven.apache.org</url>
-
+<repositories>
+    <repository>
+      <id>maven-group</id>
+      <url>http://your-host:8081/repository/maven-group/</url>
+    </repository>
+  </repositories>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -21,7 +26,7 @@
       <id>maven-group</id>
       <url>http://localhost:8081/repository/maven-public/</url>
     </repository>
-  </repositories>		
+  </repositories>	
 <distributionManagement>
     <snapshotRepository>
       <id>nexus-snapshots</id>
