--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  <dependency>
+    <groupId>org.glassfish</groupId>
+    <artifactId>javax.el</artifactId>
+    <version>3.0.1-b06</version>
+</dependency>
 <repositories>
     <repository>
       <id>maven-group</id>
