--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>helloworld</groupId>
   <artifactId>helloworld</artifactId>
   <packaging>war</packaging>
-  <version>8.4-SNAPSHOT</version>
+  <version>8.4</version>
   <name>Hello world sample web app</name>
   <url>http://maven.apache.org</url>
   <dependencies>
@@ -13,11 +13,6 @@
       <artifactId>junit</artifactId>
       <version>4.11</version>
       <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.glassfish</groupId>
-      <artifactId>javax.el</artifactId>
-      <version>3.0.1-b06</version>
     </dependency>
   </dependencies>
 <repositories>
