--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,17 @@
   <groupId>helloworld</groupId>
   <artifactId>helloworld</artifactId>
   <packaging>war</packaging>
-  <version>8.5</version>
+  <version>9.0</version>
   <name>Hello world sample web app</name>
   <url>http://maven.apache.org</url>
+  <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>2.19.1</version>
+    <configuration>
+        <testFailureIgnore>true</testFailureIgnore>
+    </configuration>
+  </plugin>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
