--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,8 @@
   <version>9.0</version>
   <name>Hello world sample web app</name>
   <url>http://maven.apache.org</url>
-  <plugin>
+  <plugins>
+    <plugin>
     <groupId>org.apache.maven.plugins</groupId>
     <artifactId>maven-surefire-plugin</artifactId>
     <version>2.19.1</version>
@@ -15,6 +16,7 @@
         <testFailureIgnore>true</testFailureIgnore>
     </configuration>
   </plugin>
+  </plugins>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
